src/css/pages/case-study-river-safari.scss
@import '../utils/vars';
@import '../utils/colors';
@import '../utils/type';
@import '../utils/functions';
@import '../utils/mixins';

.cs-container {
  &__column {
    @media screen and (min-width: rem(1024)) {
      padding-right: rem(46);
      padding-left: rem(46);
    }

    @media screen and (min-width: rem(1366)) {
      padding-right: rem(94);
      padding-left: rem(94);
    }

    @media screen and (min-width: rem(1440)) {
      padding-right: rem(112);
      padding-left: rem(112);
    }
  }
}

.hero {
  position: relative;
  width: 100%;

  img {
    width: 100%;
  }
}

.intro {
  position: relative;

  background-color: $tuf-color-white;

  color: $tuf-color-gray;

  &__bg-right {
    position: relative;

    left: 0;

    display: flex;

    align-items: center;
    justify-content: center;

    height: rem(300);
    width: 100%;

    background-image: url('/assets/img/case-studies/river-safari/intro__image.jpg');
    background-size: cover;
    background-position: center;
    padding: 0 rem(50);

    @media screen and (min-width: rem(768)) {
      position: absolute;
      top: 0;
      left: 50%;
      width: 50%;
      height: 100%;
    }

    img {
      width: auto;
      height: auto;
      max-width: rem(631);
      max-height: rem(190);
    }
  }
}

.problem {
  color: $tuf-color-white;

  background-color: #163526;

  &__content {
    &__copy {
      display: block;

      img {
        display: block;
        width: auto;
        height: auto;
        max-height: rem(347);
        align-self: center;

        margin: 0 auto;
        margin-top: rem(58);

        @media screen and (min-width: rem(1024)) {
          margin-right: 0;
          margin-left: 0;
        }
      }
    }
  }
}

.adventure {
  display: flex;

  flex-direction: column;

  background-color: $tuf-color-white;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__left,
  &__right {
    position: relative;
    display: flex;

    flex-direction: column;

    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }

  &__left {
    position: relative;
    width: 100%;

    background-color: $tuf-color-white;
    color: $tuf-color-gray;

    img {
      width: 100%;
    }

    .cs-content {
      @media screen and (min-width: rem(768)) {
        max-width: rem(360);
      }

      @media screen and (min-width: rem(996)) {
        max-width: rem(480);
      }

      @media screen and (min-width: rem(1200)) {
        max-width: rem(570);
      }

      @media screen and (min-width: rem(1440)) {
        max-width: rem(720);
      }
    }

    .cs-container__column {
      @media screen and (min-width: rem(1100)) {
        padding-left: rem(114);
      }

      @media screen and (min-width: rem(1200)) {
        padding-left: rem(50);
      }

      @media screen and (min-width: rem(1370)) {
        padding-left: rem(94);
      }

      @media screen and (min-width: rem(1440)) {
        padding-left: rem(114);
      }
    }
  }

  &__right {
    background-color: #6d4a2b;
    color: $tuf-color-white;

    font-weight: $tuf-font-weight-regular;

    .cs-content--right {
      margin: 0 auto;

      max-width: rem(640);
    }

    &__icon {
      width: rem(70);

      max-width: none;
    }

    table {
      tr {
        td {
          font-size: rem(18);
          padding-bottom: rem(10);

          &:first-child {
            padding-right: rem(40);
          }

          h3 {
            font-size: rem(24);
            font-weight: $tuf-font-weight-bold;
            margin-bottom: 0;
          }
        }

        &:last-child {
          td {
            padding-bottom: 0;
          }
        }
      }
    }
  }
}

.canola {
  background-color: #4aa3d3;
  color: $tuf-color-white;

  &__left {
    max-width: 100%;

    @media screen and (min-width: rem(1024)) {
      max-width: 50%;
    }
  }

  &__right {
    padding: 0;
    max-width: 100%;
  }

  &__image {
    @media screen and (min-width: rem(768)) {
      position: absolute;
      height: 100%;
      width: auto;
      max-width: none;
      left: 0;
    }
  }
}

.notes {
  background-size: cover;
  background-position: center;
  background-image: url('/assets/img/case-studies/river-safari/notes__background--mobile.jpg');

  @media screen and (min-width: rem(768)) {
    height: auto;
    background-image: url('/assets/img/case-studies/river-safari/notes__background--desktop.jpg');
  }
}

.planning {
  background-color: $tuf-color-white;
  color: $tuf-color-gray;

  .cs-container {
    max-width: none;
  }

  &__desc {
    max-width: rem(480);
  }

  &__left,
  &__right {
    flex: 0 0 auto;
  }

  &__left {
    @media screen and (min-width: rem(768)) {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: flex-end;
      width: 50%;
    }

    &__image {
      width: auto;
      height: auto;
      max-height: rem(149);
      margin: rem(40) 0;
    }
  }

  &__right {
    padding: rem(24);

    img {
      width: 100%;
      height: auto;
      max-width: rem(799);
    }

    @media screen and (min-width: rem(768)) {
      display: flex;
      flex-direction: row;
      align-items: center;
      width: 50%;
    }

    @media screen and (min-width: rem(1024)) {
      padding-left: rem(30);
      padding-right: rem(30);
    }

    @media screen and (min-width: rem(1366)) {
      padding-left: rem(40);
      padding-right: rem(40);
    }

    @media screen and (min-width: rem(1440)) {
      padding-left: rem(60);
      padding-right: rem(60);
    }

    @media screen and (min-width: rem(1920)) {
      padding-left: rem(80);
      padding-right: rem(80);
    }
  }
}

.map {
  display: flex;

  flex-direction: column;

  background-color: $tuf-color-white;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__left,
  &__right {
    position: relative;
    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }
  }

  &__left {
    background-color: #163526;
    color: $tuf-color-white;

    &__content {
      margin: 0 0 0 auto;

      @media screen and (min-width: rem(768)) {
        max-width: rem(360);
      }

      @media screen and (min-width: rem(996)) {
        max-width: rem(480);
      }

      @media screen and (min-width: rem(1200)) {
        max-width: rem(570);
      }

      @media screen and (min-width: rem(1440)) {
        max-width: rem(720);
      }
    }

    &__bg-image {
      width: 100%;
    }

    &__image {
      display: block;
      margin: rem(40) 0;
      max-width: rem(146);
    }
  }

  &__right {
    display: flex;

    flex-direction: column;

    &__bottom {
      flex: 1;
      background-color: #e8c254;

      &__image {
        display: block;
        margin: 0 0 0 auto;
        width: calc(100% - #{rem(15)});
        max-width: 58.5625rem;
      }

      &__content {
        @media screen and (min-width: rem(768)) {
          max-width: rem(360);
        }

        @media screen and (min-width: rem(996)) {
          max-width: rem(480);
        }

        @media screen and (min-width: rem(1200)) {
          max-width: rem(570);
        }

        @media screen and (min-width: rem(1440)) {
          max-width: rem(720);
        }
      }
    }

    &__top {
      background-color: #ccc;

      color: $tuf-color-gray;

      &__content {
        padding-bottom: 0;

        @media screen and (min-width: rem(768)) {
          max-width: rem(360);
        }

        @media screen and (min-width: rem(996)) {
          max-width: rem(480);
        }

        @media screen and (min-width: rem(1200)) {
          max-width: rem(570);
        }

        @media screen and (min-width: rem(1440)) {
          max-width: rem(720);
        }
      }

      &__image {
        padding-top: rem(40);
      }
    }
  }
}

.insight {
  background-size: cover;
  background-position: center;
  background-image: url('/assets/img/case-studies/river-safari/insight__background--mobile.jpg');

  @media screen and (min-width: rem(768)) {
    height: auto;
    background-image: url('/assets/img/case-studies/river-safari/insight__background--desktop.jpg');
  }

  &__image {
    display: block;

    @media screen and (min-width: rem(768)){
      display: none;
    }

    &--desktop {
      display: none;

      @media screen and (min-width: rem(768)){
        display: block;
      }
    }
  }
}

.development {
  display: flex;

  flex-direction: column;

  @media screen and (min-width: rem(768)) {
    flex-direction: row;
  }

  &__left,
  &__right {
    width: 100%;

    @media screen and (min-width: rem(768)) {
      width: 50%;
    }

    .cs-content {
      @media screen and (min-width: rem(768)) {
        max-width: rem(360);
      }

      @media screen and (min-width: rem(996)) {
        max-width: rem(480);
      }

      @media screen and (min-width: rem(1200)) {
        max-width: rem(570);
      }

      @media screen and (min-width: rem(1440)) {
        max-width: rem(720);
      }
    }

    .cs-container__column {
      @media screen and (min-width: rem(1100)) {
        padding-left: rem(114);
      }

      @media screen and (min-width: rem(1200)) {
        padding-left: rem(50);
      }

      @media screen and (min-width: rem(1370)) {
        padding-left: rem(94);
      }

      @media screen and (min-width: rem(1440)) {
        padding-left: rem(114);
      }
    }
  }

  &__left {
    display: flex;
    flex-direction: column;
    background-color: $tuf-color-white;
    color: $tuf-color-gray;

    &__content {
      display: flex;

      flex-direction: column;

      justify-content: space-between;

      .highlight {
        color: #eb0a73;
      }
    }

    &__image {
      width: 100%;
    }
  }

  &__right {
    display: flex;

    flex-direction: column;
    background-color: #005a6b;
    color: $tuf-color-white;

    img {
      width: 100%;
    }
  }
}

